--- a/public/gatk-framework/pom.xml
+++ b/public/gatk-framework/pom.xml
@@ -83,6 +83,9 @@
                         <id>package-largescaletests</id>
                     </execution>
                     <execution>
+                        <id>package-knowledgebasetests</id>
+                    </execution>
+                    <execution>
                         <id>package-pipelinetests</id>
                     </execution>
                 </executions>
