--- a/public/queue-package/pom.xml
+++ b/public/queue-package/pom.xml
@@ -209,6 +209,10 @@
                 <artifactId>maven-junction-plugin</artifactId>
                 <executions>
                     <execution>
+                        <id>link-binary-jar</id>
+                        <phase>${sting.shade.phase}</phase>
+                    </execution>
+                    <execution>
                         <id>link-git-release</id>
                         <phase>${sting.shade.phase}</phase>
                     </execution>
