--- a/public/queue-package/pom.xml
+++ b/public/queue-package/pom.xml
@@ -88,6 +88,7 @@
             <artifactId>queue-framework</artifactId>
             <version>${project.version}</version>
             <type>test-jar</type>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -95,6 +96,7 @@
             <artifactId>gatk-framework</artifactId>
             <version>${project.version}</version>
             <type>test-jar</type>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
