--- a/public/gatk-package/pom.xml
+++ b/public/gatk-package/pom.xml
@@ -57,6 +57,7 @@
             <artifactId>gatk-framework</artifactId>
             <version>${project.version}</version>
             <type>test-jar</type>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
