When git describe fails use "exported" instead of "unknown".

--- a/public/sting-root/pom.xml
+++ b/public/sting-root/pom.xml
@@ -531,6 +531,7 @@
                     </extraArguments>
                     <setReactorProjectsProperties>true</setReactorProjectsProperties>
                     <descriptionProperty>git.version</descriptionProperty>
+                    <failOutput>exported</failOutput>
                 </configuration>
                 <executions>
                     <execution>
