--- a/public/sting-root/pom.xml
+++ b/public/sting-root/pom.xml
@@ -335,7 +335,11 @@
                     <artifactId>maven-assembly-plugin</artifactId>
                     <version>2.4</version>
                 </plugin>
-
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-enforcer-plugin</artifactId>
+                    <version>1.3.1</version>
+                </plugin>
                 <!--
                 surefire/failsafe configurations are global, even across poms
                 not directly aggregated, for example package-tests/pom.xml
