Followed Khalid's suggestion for packing libVectorLoglessCaching into the jar file with Maven

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /*.bed
 *~
 /*.vcf
+/*.vcf.idx
 /*.txt
 /*.csh
 /.*
@@ -40,3 +41,38 @@ perf
 verify
 maven-metadata-local.xml
 dependency-reduced-pom.xml
+private/gatk-private/private/
+private/gatk-private/public/
+private/gatk-private/target/
+private/na12878kb-utils/public/
+private/na12878kb-utils/target/
+private/queue-private/private/
+private/queue-private/public/
+private/queue-private/target/
+private/scala/
+private/testdata
+protected/gatk-protected/private/
+protected/gatk-protected/public/
+protected/gatk-protected/target/
+public/external-example/target/
+public/gatk-framework/private/
+public/gatk-framework/public/
+public/gatk-framework/target/
+public/gatk-package/private/
+public/gatk-package/public/
+public/gatk-package/target/
+public/gatk-queue-extgen/public/
+public/gatk-queue-extgen/target/
+public/gsalib/public/
+public/gsalib/target/
+public/queue-framework/private/
+public/queue-framework/public/
+public/queue-framework/target/
+public/queue-package/private/
+public/queue-package/public/
+public/queue-package/target/
+public/scala/
+public/sting-utils/public/
+public/sting-utils/target/
+public/testdata
+target/
