--- a/public/c++/VectorPairHMM/pom.xml
+++ b/public/c++/VectorPairHMM/pom.xml
@@ -6,12 +6,12 @@
         <groupId>org.broadinstitute.sting</groupId>
         <artifactId>sting-root</artifactId>
         <version>2.8-SNAPSHOT</version>
-        <relativePath>../../public/sting-root</relativePath>
+        <relativePath>../../../public/sting-root</relativePath>
     </parent>
 
-    <artifactId>pairhmm-native</artifactId>
+    <artifactId>VectorPairHMM</artifactId>
     <packaging>pom</packaging>
-    <name>PairHMM Native Libraries</name>
+    <name>Vectorized PairHMM native libraries</name>
 
     <description>Builds a platform dependent version of pairhmm. During install, copies it into sting-utils.</description>
 
@@ -19,7 +19,7 @@
         <sourceEncoding>UTF-8</sourceEncoding>
         <project.build.sourceEncoding>${sourceEncoding}</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${sourceEncoding}</project.reporting.outputEncoding>
-        <sting.basedir>${project.basedir}/../..</sting.basedir>
+        <sting.basedir>${project.basedir}/../../..</sting.basedir>
         <sting-utils.basedir>${sting.basedir}/public/sting-utils</sting-utils.basedir>
         <!-- Where to place the library in sting-utils -->
         <pairhmm.resources.directory>${sting-utils.basedir}/src/main/resources/org/broadinstitute/sting/utils/pairhmm</pairhmm.resources.directory>
@@ -64,7 +64,7 @@
                         <phase>compile</phase>
                         <configuration>
                             <executable>make</executable>
-                            <workingDirectory>VectorPairHMM</workingDirectory>
+                            <workingDirectory>.</workingDirectory>
                             <environmentVariables>
                                 <ARCHITECTURE>${pairhmm.build.architecture}</ARCHITECTURE>
                                 <LIB_EXT>${pairhmm.build.extension}</LIB_EXT>
