--- a/public/sting-root/pom.xml
+++ b/public/sting-root/pom.xml
@@ -37,7 +37,10 @@
         <sting.pipelinetests.run>false</sting.pipelinetests.run>
         <scala.maxmemory>1g</scala.maxmemory>
         <test.maxmemory>4g</test.maxmemory>
-        <test.args>-Xmx${test.maxmemory}</test.args>
+        <java.gc.threads>4</java.gc.threads>
+        <java.gc.timeLimit>50</java.gc.timeLimit>
+        <java.gc.heapFreeLimit>10</java.gc.heapFreeLimit>
+        <test.args>-Xmx${test.maxmemory} -XX:+UseParallelOldGC -XX:ParallelGCThreads=${java.gc.threads} -XX:GCTimeLimit=${java.gc.timeLimit} -XX:GCHeapFreeLimit=${java.gc.heapFreeLimit}</test.args>
 
         <!-- Version numbers for picard sam-jdk. Usually kept in sync. -->
         <picard.public.version>1.107.1683</picard.public.version>
