--- a/public/sting-root/pom.xml
+++ b/public/sting-root/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>org.broadinstitute.sting</groupId>
     <artifactId>sting-root</artifactId>
-    <version>2.8-SNAPSHOT</version>
+    <version>3.0</version>
     <packaging>pom</packaging>
     <name>Sting Root</name>
 
