--- a/public/sting-utils/pom.xml
+++ b/public/sting-utils/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.broadinstitute.sting</groupId>
         <artifactId>sting-aggregator</artifactId>
-        <version>2.8-SNAPSHOT</version>
+        <version>3.0</version>
         <relativePath>../..</relativePath>
     </parent>
 
